[package]
name = "pt-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.21", features = ["derive"] }
env_logger = "0.10.0"
itertools = "0.11.0"
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["json", "cookies", "brotli"] }
scraper = "0.17.1"
sqlite = { version = "0.31.0", features = ["bundled"] }
tokio = { version = "1.29.1", features = ["full"] }

